seaqt/QtWidgets/gen_qwidget.h

typedef struct QBitmap QBitmap;
typedef struct QCursor QCursor;
typedef struct QFont QFont;
typedef struct QFontInfo QFontInfo;
typedef struct QFontMetrics QFontMetrics;
typedef struct QGraphicsEffect QGraphicsEffect;
typedef struct QIcon QIcon;
typedef struct QMetaObject QMetaObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPainter QPainter;
typedef struct QPalette QPalette;
typedef struct QPixmap QPixmap;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QSize QSize;
typedef struct QStyle QStyle;
typedef struct QWidget QWidget;
typedef struct QWidgetData QWidgetData;
QWidgetData* QWidgetData_new(QWidgetData* param1);
void QWidgetData_operatorAssign(QWidgetData* self, QWidgetData* param1);
void QWidgetData_delete(QWidgetData* self);
QWidget* QWidget_new(QWidget* parent);
QWidget* QWidget_new2();
QWidget* QWidget_new3(QWidget* parent, int f);
QMetaObject* QWidget_metaObject(const QWidget* self);
void* QWidget_metacast(QWidget* self, const char* param1);
struct miqt_string QWidget_tr(const char* s);
struct miqt_string QWidget_trUtf8(const char* s);
int QWidget_devType(const QWidget* self);
uintptr_t QWidget_winId(const QWidget* self);
void QWidget_createWinId(QWidget* self);
uintptr_t QWidget_internalWinId(const QWidget* self);
uintptr_t QWidget_effectiveWinId(const QWidget* self);
QStyle* QWidget_style(const QWidget* self);
void QWidget_setStyle(QWidget* self, QStyle* style);
bool QWidget_isTopLevel(const QWidget* self);
bool QWidget_isWindow(const QWidget* self);
bool QWidget_isModal(const QWidget* self);
int QWidget_windowModality(const QWidget* self);
void QWidget_setWindowModality(QWidget* self, int windowModality);
bool QWidget_isEnabled(const QWidget* self);
bool QWidget_isEnabledTo(const QWidget* self, QWidget* param1);
bool QWidget_isEnabledToTLW(const QWidget* self);
void QWidget_setEnabled(QWidget* self, bool enabled);
void QWidget_setDisabled(QWidget* self, bool disabled);
void QWidget_setWindowModified(QWidget* self, bool windowModified);
QRect* QWidget_frameGeometry(const QWidget* self);
QRect* QWidget_geometry(const QWidget* self);
QRect* QWidget_normalGeometry(const QWidget* self);
int QWidget_x(const QWidget* self);
int QWidget_y(const QWidget* self);
QPoint* QWidget_pos(const QWidget* self);
QSize* QWidget_frameSize(const QWidget* self);
QSize* QWidget_size(const QWidget* self);
int QWidget_width(const QWidget* self);
int QWidget_height(const QWidget* self);
QRect* QWidget_rect(const QWidget* self);
QRect* QWidget_childrenRect(const QWidget* self);
QRegion* QWidget_childrenRegion(const QWidget* self);
QSize* QWidget_minimumSize(const QWidget* self);
QSize* QWidget_maximumSize(const QWidget* self);
int QWidget_minimumWidth(const QWidget* self);
int QWidget_minimumHeight(const QWidget* self);
int QWidget_maximumWidth(const QWidget* self);
int QWidget_maximumHeight(const QWidget* self);
void QWidget_setMinimumSize(QWidget* self, QSize* minimumSize);
void QWidget_setMinimumSize2(QWidget* self, int minw, int minh);
void QWidget_setMaximumSize(QWidget* self, QSize* maximumSize);
void QWidget_setMaximumSize2(QWidget* self, int maxw, int maxh);
void QWidget_setMinimumWidth(QWidget* self, int minw);
void QWidget_setMinimumHeight(QWidget* self, int minh);
void QWidget_setMaximumWidth(QWidget* self, int maxw);
void QWidget_setMaximumHeight(QWidget* self, int maxh);
QSize* QWidget_sizeIncrement(const QWidget* self);
void QWidget_setSizeIncrement(QWidget* self, QSize* sizeIncrement);
void QWidget_setSizeIncrement2(QWidget* self, int w, int h);
QSize* QWidget_baseSize(const QWidget* self);
void QWidget_setBaseSize(QWidget* self, QSize* baseSize);
void QWidget_setBaseSize2(QWidget* self, int basew, int baseh);
void QWidget_setFixedSize(QWidget* self, QSize* fixedSize);
void QWidget_setFixedSize2(QWidget* self, int w, int h);
void QWidget_setFixedWidth(QWidget* self, int w);
void QWidget_setFixedHeight(QWidget* self, int h);
QPoint* QWidget_mapToGlobal(const QWidget* self, QPoint* param1);
QPoint* QWidget_mapFromGlobal(const QWidget* self, QPoint* param1);
QPoint* QWidget_mapToParent(const QWidget* self, QPoint* param1);
QPoint* QWidget_mapFromParent(const QWidget* self, QPoint* param1);
QPoint* QWidget_mapTo(const QWidget* self, QWidget* param1, QPoint* param2);
QPoint* QWidget_mapFrom(const QWidget* self, QWidget* param1, QPoint* param2);
QWidget* QWidget_window(const QWidget* self);
QWidget* QWidget_nativeParentWidget(const QWidget* self);
QWidget* QWidget_topLevelWidget(const QWidget* self);
QPalette* QWidget_palette(const QWidget* self);
void QWidget_setPalette(QWidget* self, QPalette* palette);
void QWidget_setBackgroundRole(QWidget* self, int backgroundRole);
int QWidget_backgroundRole(const QWidget* self);
void QWidget_setForegroundRole(QWidget* self, int foregroundRole);
int QWidget_foregroundRole(const QWidget* self);
QFont* QWidget_font(const QWidget* self);
void QWidget_setFont(QWidget* self, QFont* font);
QFontMetrics* QWidget_fontMetrics(const QWidget* self);
QFontInfo* QWidget_fontInfo(const QWidget* self);
QCursor* QWidget_cursor(const QWidget* self);
void QWidget_setCursor(QWidget* self, QCursor* cursor);
void QWidget_unsetCursor(QWidget* self);
void QWidget_setMouseTracking(QWidget* self, bool enable);
bool QWidget_hasMouseTracking(const QWidget* self);
bool QWidget_underMouse(const QWidget* self);
void QWidget_setTabletTracking(QWidget* self, bool enable);
bool QWidget_hasTabletTracking(const QWidget* self);
void QWidget_setMask(QWidget* self, QBitmap* mask);
void QWidget_setMaskWithMask(QWidget* self, QRegion* mask);
QRegion* QWidget_mask(const QWidget* self);
void QWidget_clearMask(QWidget* self);
void QWidget_render(QWidget* self, QPaintDevice* target);
void QWidget_renderWithPainter(QWidget* self, QPainter* painter);
QPixmap* QWidget_grab(QWidget* self);
QGraphicsEffect* QWidget_graphicsEffect(const QWidget* self);
void QWidget_setGraphicsEffect(QWidget* self, QGraphicsEffect* effect);
void QWidget_grabGesture(QWidget* self, int type);
void QWidget_ungrabGesture(QWidget* self, int type);
void QWidget_setWindowTitle(QWidget* self, struct miqt_string windowTitle);
void QWidget_setStyleSheet(QWidget* self, struct miqt_string styleSheet);
struct miqt_string QWidget_styleSheet(const QWidget* self);
struct miqt_string QWidget_windowTitle(const QWidget* self);
void QWidget_setWindowIcon(QWidget* self, QIcon* icon);
QIcon* QWidget_windowIcon(const QWidget* self);
void QWidget_setWindowIconText(QWidget* self, struct miqt_string windowIconText);
struct miqt_string QWidget_windowIconText(const QWidget* self);
void QWidget_setWindowRole(QWidget* self, struct miqt_string windowRole);
struct miqt_string QWidget_windowRole(const QWidget* self);
void QWidget_setWindowFilePath(QWidget* self, struct miqt_string filePath);
struct miqt_string QWidget_windowFilePath(const QWidget* self);
void QWidget_setWindowOpacity(QWidget* self, double level);
double QWidget_windowOpacity(const QWidget* self);
bool QWidget_isWindowModified(const QWidget* self);
void QWidget_setToolTip(QWidget* self, struct miqt_string toolTip);
struct miqt_string QWidget_toolTip(const QWidget* self);
void QWidget_setToolTipDuration(QWidget* self, int msec);
int QWidget_toolTipDuration(const QWidget* self);
void QWidget_setStatusTip(QWidget* self, struct miqt_string statusTip);
struct miqt_string QWidget_statusTip(const QWidget* self);
void QWidget_setWhatsThis(QWidget* self, struct miqt_string whatsThis);
struct miqt_string QWidget_whatsThis(const QWidget* self);